# panter_ws

./: README.md  estructura.txt
bringup_pkg/: CMakeLists.txt  package.xml
bringup_pkg/launch/: proyect.launch.py  proyect_vel.launch.py
control_pkg/: CMakeLists.txt  package.xml
control_pkg/config/: control_config.yaml
control_pkg/include/: controlVelocidad.hpp  controller.hpp  keyboardcontrol.hpp  keyboardcontrolTorque copy.hpp  keyboardcontrolTorque.hpp
control_pkg/launch/: ros.launch copy.py  ros.launch.py  ros_vel.launch.py
control_pkg/src/: controlVelocidad.cpp  controller.cpp  keyboardcontrol.cpp  keyboardcontrolTorque copy.cpp  keyboardcontrolTorque.cpp  testingROS.cpp
description_pkg/: CMakeLists.txt  package.xml
description_pkg/config/: control_config copy.yaml  ros_gz_bridge.yaml
description_pkg/launch/: panter_setup.launch.py  pantersim.launch.py  sim.launch.py  simTorque.launch.py  simVel.launch.py  sim_sdf.launch.py  sim_urdf.launch.py  sim_xacro.launch.py
description_pkg/meshes/: CH.STL  MGD_DCH.STL  MGD_IZQ.STL  MGT_DCH.STL  MGT_IZQ.STL  SD01_DCH.STL  SD01_IZQ.STL  SD01_PISTON_IZQ.STL  SD02_DCH.STL  SD02_IZQ.STL  SD03_DCH.STL  SD03_IZQ.STL  ST01_BODY_DCH.STL  ST01_BODY_IZQ.STL  ST01_DCH.STL  ST01_IZQ.STL  ST01_PISTON_DCH.STL  ST02_DCH.STL  ST02_IZQ.STL  ST03_DCH.STL  ST03_IZQ.STL
description_pkg/meshes/old/: SD01_BODY_DCH.STL
description_pkg/meshes2/: MGD2_DCH.STL  MGD_DCH.stl  SD01_IZQ.STL  SD02_DCH.STL  SD02_DCH.stl  SD02_IZQ.stl  ST02_DCH.STL  ST02_IZQ.STL
description_pkg/meshes2/old/: SD01_PISTON_DCH.STL  SD01_PISTON_IZQ.STL
description_pkg/meshes_panter_old/: CH.STL  MGD_IZQ.stl  MGT_DCH.STL  SD03_DCH.STL  SD03_IZQ.STL  ST01_DCH.STL  ST01_IZQ.STL  ST03_IZQ.STL  base_link.STL
description_pkg/meshes_panter_old/old/: SD01_BODY_IZQ.STL  ST01_PISTON_IZQ.STL
description_pkg/models/Tierra/: model.config  model.sdf
description_pkg/models/Tierra/meshes/: escenario1.blend  escenario1.dae  escenario1.stl  escenario2.blend  escenario2.dae  escenario2.stl  escenario3.blend  escenario3.dae  (+9 more)
description_pkg/rviz/: panter.rviz
description_pkg/sdf/: panter.sdf  reserva_11_3.sdf
description_pkg/urdf/: panter copy.urdf  panter.urdf  panter_old.urdf  panter_sw.urdf  panter_torque.urdf  panter_vel.urdf
description_pkg/worlds/: my_mangueta.sdf  my_world.sdf  terrain1.sdf  tierra_world.sdf
doc/: git.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/description_pkg/share/description_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/description_pkg/share/description_pkg/meshes/: MGT_IZQ.STL
install/description_pkg/share/description_pkg/sdf/: panter.sdf  reserva_v2.sdf
install/description_pkg/share/description_pkg/urdf/: panter.urdf
install/description_pkg/share/description_pkg/worlds/: terrain1.dae
log/: latest_build
(+12 files in other folders)
