<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>description_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="j.avilaorero@gmail.com">jorgeavila</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2launch</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
